--- a/Maidan/Maidan/Maidan.csproj
+++ b/Maidan/Maidan/Maidan.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
 </Project>
