Email Send,Email Verification and Admin Authorization Done.

--- a/Maidan/Maidan/Maidan.csproj
+++ b/Maidan/Maidan/Maidan.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Areas\Admin\Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AppUser.Management.Service\AppUser.Management.Service.csproj" />
+  </ItemGroup>
+
 </Project>
